--- a/cincodejunho.html
+++ b/cincodejunho.html
@@ -4,7 +4,7 @@ num = prompt("Digite um número entre 1 e 10: ")
 while (num > 10 || num < 1) {
 num = prompt("Digite um número entre 1 e 10: ")
 }
-for(num; num <= 10; num++)
+for(num; num <= 10; num--)
 {
 alert(num, "\n")
 }
